--- a/index.html
+++ b/index.html
@@ -5,55 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lucas Pinheiro</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&family=Press+Start+2P&family=Source+Code+Pro&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav class="menu">
         <ul>
           <li><a href="#">Sobre</a></li>
-          <li><a href="#">Portfólio</a></li>
+          <li><a href="#">Projetos</a></li>
           <li><a href="#">Contato</a></li>
         </ul>
       </nav>
       <div>
         <h1 class="site-title">Lucas Pinheiro</h1>
         <h2 class="site-subtitle">jr. Frontend developer</h2>
+        <h2 class="site-subtitle">sr. email responder</h2>
       </div>
     </header>
-    <section>
-      <h2>Portfólio</h2>
-      <figure>
-        <img
-          class="img-portfolio"
-          src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg"
-          alt="eCommerce"
-        />
-        <figcaption>eCommerce</figcaption>
-      </figure>
-      <figure>
-        <img
-          class="img-portfolio"
-          src="./img/mobile-creditos-nate-grant-unsplash.jpg"
-          alt=">Mobile"
-        />
-        <figcaption>Mobile</figcaption>
-      </figure>
-      <figure>
-        <img
-          class="img-portfolio"
-          src="./img/webdesign-creditos-domenico-loia-unsplash.jpg"
-          alt="Web design"
-        />
-        <figcaption>Web design</figcaption>
-      </figure>
-      <figure>
-        <img
-          class="img-portfolio"
-          src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg"
-          alt="Projetos pessoais"
-        />
-        <figcaption>Projetos pessoais</figcaption>
-      </figure>
+    <section class="portfolio">
+      <h2>Projetos</h2>
+
+      <div class="grid">
+        <figure>
+          <img
+            class="img-portfolio"
+            src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg"
+            alt="eCommerce"
+          />
+          <figcaption>eCommerce</figcaption>
+        </figure>
+        <figure>
+          <img
+            class="img-portfolio"
+            src="./img/mobile-creditos-nate-grant-unsplash.jpg"
+            alt=">Mobile"
+          />
+          <figcaption>Mobile</figcaption>
+        </figure>
+        <figure>
+          <img
+            class="img-portfolio"
+            src="./img/webdesign-creditos-domenico-loia-unsplash.jpg"
+            alt="Web design"
+          />
+          <figcaption>Web design</figcaption>
+        </figure>
+        <figure>
+          <img
+            class="img-portfolio"
+            src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg"
+            alt="Projetos pessoais"
+          />
+          <figcaption>Projetos pessoais</figcaption>
+        </figure>
+      </div>
     </section>
   </body>
 </html>
